samples/_failures_safe/1761181884_55cb24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67f3af05.c: In function ‘parser_init’:
./samples/SAFE/__tmp_67f3af05.c:151:11: error: ‘struct Parser’ has no member named ‘error’
  151 |     parser->error
      |           ^~
./samples/SAFE/__tmp_67f3af05.c:151:18: error: expected ‘;’ at end of input
  151 |     parser->error
      |                  ^
      |                  ;
./samples/SAFE/__tmp_67f3af05.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->error
      |     ^~~~~~
